# appveyor-tests

./: .appveyor.yml  CMakeLists.txt  FindwxWidgets-SupportMSVC1911.patch  InstallRequiredSystemLibraries.cmake-SupportMSVC1911.patch
