CMAKE_MINIMUM_REQUIRED(VERSION 3.0 FATAL_ERROR)
PROJECT(Test VERSION 0.0.1)

SET(wxWidgets_USE_REL_AND_DBG ON)
FIND_PACKAGE(wxWidgets REQUIRED core qa net html xml aui adv stc webview base scintilla REQUIRED)
INCLUDE(${wxWidgets_USE_FILE})

MESSAGE(STATUS "Host system : ${CMAKE_HOST_SYSTEM_NAME} ${CMAKE_HOST_SYSTEM_PROCESSOR}")
MESSAGE(STATUS "Target system : ${CMAKE_SYSTEM_NAME} ${TARGET_ARCH}")
MESSAGE(STATUS "Generator : ${CMAKE_GENERATOR}")
MESSAGE(STATUS "CMake cmd : ${CMAKE_COMMAND}")
MESSAGE(STATUS "Build cmd : ${CMAKE_MAKE_PROGRAM}")
MESSAGE(STATUS "Toolset : ${CMAKE_VS_PLATFORM_TOOLSET}")
MESSAGE(STATUS "Toolset host : ${CMAKE_VS_PLATFORM_TOOLSET_HOST_ARCHITECTURE}")
MESSAGE(STATUS "Platform : ${CMAKE_VS_PLATFORM_NAME}")
MESSAGE(STATUS "VC installed : $ENV{VCINSTALLDIR}")
MESSAGE(STATUS "Install prefix : ${CMAKE_INSTALL_PREFIX}")
MESSAGE(STATUS "${CMAKE_HOST_SYSTEM_NAME} : ${CMAKE_HOST_SYSTEM_VERSION}")
MESSAGE(STATUS "CMake : ${CMAKE_VERSION}")
MESSAGE(STATUS "MSVC : ${MSVC_VERSION}")
MESSAGE(STATUS "${CMAKE_CXX_COMPILER_ID} : ${CMAKE_CXX_COMPILER_VERSION}")
MESSAGE(STATUS "Win SDK : ${CMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION}")

MESSAGE(STATUS "wxWidgets : ${wxWidgets_VERSION_STRING}")
